--- a/開発用/src/assets/sass/project/_p-spend.scss
+++ b/開発用/src/assets/sass/project/_p-spend.scss
@@ -31,17 +31,19 @@
     @include global.mq('sp'){
         width: 100%;
         padding: 85px 22px 110px 22px;
+        height: auto;
     }
 
 }
 
 .p-spend-slide__container{
     display: flex;
-    width: 6738px;
+    width: 7087px;
     height: inherit;
     margin-left: 117px;
     @include global.mq('sp'){
         flex-direction: column;
+        width: 100%;
         align-items: center;
         margin-left: auto;
         margin-right: auto;
@@ -53,6 +55,9 @@
 .p-spend-slide__list{
     display: flex;
     width: 100%;
+    @include global.mq('sp'){
+        flex-direction: column;
+    }
 
 }
 
@@ -60,6 +65,28 @@
 .p-spend-slide__block{
     height: 601px;
     position: relative;
+    flex: 1;
+    opacity: 0;
+    height: auto;
+    @include global.mq('sp'){
+        height: auto;
+        flex: 1;
+        &::after{
+            display: none;
+        }
+        .p-spend-slide__accent{
+            display: none;
+        }
+        .border-line{
+            display: none;
+        }
+        .p-spend-slide__card{
+            width: 100%;
+            margin: 0;
+        }
+
+    }
+    
 }
 
 .p-spend-slide__card{
@@ -67,6 +94,7 @@
     height: inherit;
     position: relative;
 }
+
 
 .p-spend-slide__time {
     margin-top: 37px;
@@ -95,26 +123,26 @@
     img{
         width: auto;
         max-height: 272px;
+        @include global.mq('sp'){
+            width: 100%;
+        }
     }
 }
 
 .p-spend-slide__block1{
-    width:800px;
+    width:776px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 408px;
         margin-right: 28px;
+        @include global.mq('sp'){
+            width: 100%;
+        }
     }
     .p-spend-slide__accent{
         display: flex;
@@ -127,10 +155,20 @@
             }
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:194px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:194px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -138,23 +176,17 @@
     }
 }
 .p-spend-slide__block2{
-    width:800px;
+    width:736px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 411px;
         margin-right: 27px;
-        margin-left: -60px;
+        margin-left: 32px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -170,10 +202,20 @@
             }
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left: 227px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left: 227px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -181,26 +223,21 @@
     }
 }
 .p-spend-slide__block3{
-    width:800px;
+    width:846px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 520px;
-        margin-left: -180px;
         margin-right: 33px;
+        margin-left: 28px;
     }
     .p-spend-slide__accent{
         display: flex;
+        width: calc( 100% - 553px);
         align-items: flex-end;
         height: inherit;
         img{
@@ -211,10 +248,20 @@
             }
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:268px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left: 268px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -222,23 +269,17 @@
     }
 }
 .p-spend-slide__block4{
-    width:800px;
+    width:751px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 407px;
         margin-right: 51px;
-        margin-left: -160px;
+        margin-left: 104px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -248,34 +289,39 @@
             height: auto;
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:292px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:292px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
         background: #2D2D2E;
     }
 }
+
 .p-spend-slide__block5{
-    width:800px;
+    width:837px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 486px;
         margin-right: 51px;
-        margin-left: -200px;
+        margin-left: 51px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -285,10 +331,20 @@
             height: auto;
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:270px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left: 270px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -297,22 +353,17 @@
     
 }
 .p-spend-slide__block6{
-    width:800px;
+    width:805px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 393px;
         margin-right: 75px;
+        margin-left: 52px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -322,10 +373,20 @@
             height: auto;
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left: 238px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:238px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -333,22 +394,17 @@
     }
 }
 .p-spend-slide__block7{
-    width:800px;
+    width:784px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 361px;
         margin-right: 40px;
+        margin-left: 75px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -356,12 +412,26 @@
         height: inherit;
         img{
             height: auto;
+            &:nth-child(2){
+                margin-bottom: 107px;
+                margin-left: 36px;
+            }
         }
+    }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:236px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
     }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:236px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -369,22 +439,17 @@
     };
 }
 .p-spend-slide__block8{
-    width:800px;
+    width:750px;
     position: relative;
     display: flex;
-    &::after{
-        content:'';
-        position: absolute;
-        top:-37px;
-        left:calc( 50% - 10px );
-        width:20px;
-        height: 20px;
-        background:#2D2D2E;
-        border-radius: 50%;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
     }
     .p-spend-slide__card{
         width: 374px;
         margin-right: 70px;
+        margin-left: 136px;
     }
     .p-spend-slide__accent{
         display: flex;
@@ -394,10 +459,20 @@
             height: auto;
         }
     }
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:304px;
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:304px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -405,14 +480,18 @@
     }
 }
 .p-spend-slide__block9{
-    width:800px;
+    width:453px;
     position: relative;
     display: flex;
+    @include global.mq('sp'){
+        display: block;
+        width: 100%;
+    }
     &::after{
         content:'';
         position: absolute;
         top:-37px;
-        left:calc( 50% - 10px );
+        left: 286px;
         width:20px;
         height: 20px;
         background:#2D2D2E;
@@ -420,11 +499,12 @@
     }
     .p-spend-slide__card{
         width: 453px;
+        margin-left: 70px;      
     }
     .border-line {
         /*線の位置*/
         position: absolute;
-        left:calc( 50% - 10px );
+        left:286px;
         top:-28px ;
         height:2px;/*線の太さ*/
         width:0;/*はじめは高さを0に*/
@@ -438,6 +518,7 @@
 .p-spend-tour {
     padding-top: 190px;
     padding-bottom: 120px;
+    opacity: 0;
     @include global.mq('sp'){
         padding-top: 39px;
         padding-bottom: 20px;
