--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -1011,7 +1011,6 @@ header {
 .p-spend-slide__block {
 	flex: 1;
 	height: 601px;
-	height: auto;
 	opacity: 0;
 	position: relative;
 }
@@ -2826,6 +2825,29 @@ dialog::backdrop {
 .p-spend-slide__block .p-spend-slide__card {
 	margin: 0;
 	width: 100%;
+}
+
+.p-spend-slide__time {
+	font-size: 18px;
+	letter-spacing: 2.16px;
+	line-height: 1.8902222222;
+	margin-top: 25px;
+}
+
+.p-spend-slide__head {
+	font-size: 18px;
+	letter-spacing: 2.16px;
+	line-height: 1.8902222222;
+}
+
+.p-spend-slide__text {
+	letter-spacing: 1.5px;
+	line-height: 1.5;
+}
+
+.p-spend-slide__block__img {
+	margin-top: 5px;
+	position: static;
 }
 
 .p-spend-slide__block__img img {
