--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -976,16 +976,8 @@ header {
 }
 
 .spend-wrapper {
+	font-family: "Zen Kaku Gothic New", sans-serif;
 	overflow-x: hidden;
-}
-
-.border-line {
-	background: #2D2D2E;
-	height: 1px;
-	left: 200px;
-	position: absolute;
-	top: -27px;
-	width: 0;
 }
 
 .p-spend-slide {
@@ -1010,7 +1002,7 @@ header {
 
 .p-spend-slide__block {
 	flex: 1;
-	height: 601px;
+	height: 491px;
 	opacity: 0;
 	position: relative;
 }
@@ -1022,13 +1014,14 @@ header {
 }
 
 .p-spend-slide__time {
+	font-family: "Inter", sans-serif;
 	font-size: 24px;
 	letter-spacing: 2.88px;
 	line-height: 1.875;
-	margin-top: 37px;
 }
 
 .p-spend-slide__head {
+	font-family: "Inter", sans-serif;
 	font-size: 24px;
 	letter-spacing: 2.88px;
 	line-height: 1.875;
@@ -1289,6 +1282,10 @@ header {
 	margin-left: 52px;
 	margin-right: 75px;
 	width: 393px;
+}
+
+.p-spend-slide__block6 .p-spend-slide__card .p-spend-slide__block__img {
+	margin-top: 13px;
 }
 
 .p-spend-slide__block6 .p-spend-slide__accent {
@@ -2525,6 +2522,12 @@ dialog::backdrop {
 	transform: translateY(-17.6px) rotate(64deg);
 }
 
+.c-main-message {
+	letter-spacing: 0.9px;
+	padding-bottom: 54px;
+	padding-top: 60px;
+}
+
 .c-concept__lead {
 	font-size: 0.9375rem;
 	font-weight: 400;
@@ -2783,13 +2786,14 @@ dialog::backdrop {
 	padding-top: 15px;
 }
 
-.border-line {
-	display: none;
+.p-spend__title {
+	margin-left: 3px;
+	margin-top: 4px;
 }
 
 .p-spend-slide {
 	height: auto;
-	padding: 85px 22px 110px 22px;
+	padding: 9px 20px 40px 20px;
 	width: 100%;
 }
 
@@ -2833,18 +2837,21 @@ dialog::backdrop {
 	font-size: 18px;
 	letter-spacing: 2.16px;
 	line-height: 1.8902222222;
-	margin-top: 25px;
+	margin-top: 24px;
+	padding-left: 2px;
 }
 
 .p-spend-slide__head {
 	font-size: 18px;
 	letter-spacing: 2.16px;
 	line-height: 1.8902222222;
+	padding-left: 3px;
 }
 
 .p-spend-slide__text {
 	letter-spacing: 1.5px;
 	line-height: 1.5;
+	margin-top: 10px;
 }
 
 .p-spend-slide__block__img {
@@ -2862,47 +2869,59 @@ dialog::backdrop {
 	width: 100%;
 }
 
-.p-spend-slide__block1 .p-spend-slide__card {
-	width: 100%;
-}
-
 .p-spend-slide__block2 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
 }
 
 .p-spend-slide__block3 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
 }
 
 .p-spend-slide__block4 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
+}
+
+.p-spend-slide__block4 .p-spend-slide__card .p-spend-slide__text {
+	padding-left: 0.5px;
 }
 
 .p-spend-slide__block5 {
 	display: block;
+	margin-top: 3px;
 	width: 100%;
 }
 
 .p-spend-slide__block6 {
 	display: block;
+	margin-top: 3px;
 	width: 100%;
+}
+
+.p-spend-slide__block6 .p-spend-slide__card .p-spend-slide__text {
+	margin-top: 17px;
 }
 
 .p-spend-slide__block7 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
 }
 
 .p-spend-slide__block8 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
 }
 
 .p-spend-slide__block9 {
 	display: block;
+	margin-top: 2px;
 	width: 100%;
 }
 
