--- a/開発用/src/assets/sass/project/_p-access.scss
+++ b/開発用/src/assets/sass/project/_p-access.scss
@@ -1,7 +1,30 @@
 @use "../global/" as global;
 
 .p-access {
-    padding: 120px 0;
+    padding: 120px 0 115px;
+    font-family: global.$main-font;
+    @include global.mq('sp'){
+        padding: 60px 0;
+    }
+}
+
+.l-lower-header.p-access__header{
+    height: 60.3vh;
+    @include global.mq('sp'){
+        height: 81.5vh;
+
+    }
+    }
+ 
+
+.p-access__title{
+    padding-top: 8px;
+    padding-left: 4px;   
+    @include global.mq('sp'){
+        padding-left: 2px;
+        padding-top: 5px;
+    }
+    
 }
 
 .p-access__map {
@@ -11,43 +34,43 @@
         flex-direction: column;
         align-items: flex-start;
     }
+    @include global.mq('tab'){
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
 }
 
 .p-access__map__block {
-    position: relative;
-    padding-top: min(61.94%, 498px);
     width: 100%;
+    height: fit-content;
     max-width: 804px;
-
     > iframe{
-        position: absolute;
-        top: 0;
-        left: 0;
-        content: "";
         width: 100%;
         height: 100%;
+        aspect-ratio: 804 / 498;
     }
 }
 
 .p-access__map__address {
     margin-left: 42px;
-    letter-spacing: 1.8px;
+    letter-spacing: 1.1px;
+    line-height: calc( 26 / 15 );
     white-space: nowrap;
     @include global.mq('sp'){
         margin-left: 0;
         text-align: left;
         letter-spacing: 1.68px;
         font-size: 14px;
-        line-height: calc(26.463 / 14 );
     }
 }
 
 .p-access__route {
-    margin-top: 80px;
+    margin-top: 76px;
     line-height: calc( 31.26 / 20 );
+    padding-left: 8px;
     @include global.mq('sp'){
-        margin-top: 40px;
+        margin-top: 42px;
         line-height: calc(28.134 / 18 );
     }
     dt{
@@ -59,18 +82,23 @@
             letter-spacing: 6.57px;
         }
         &:not(:first-of-type){
-            margin-top: 34px;
+            margin-top: 30px;
             @include global.mq('sp'){
                 margin-top: 20px;
             }
         }
     }
     dd{
-        letter-spacing: 5.475px;
+        letter-spacing: 4.5px;
+        line-height: calc( 31.26 / 15 );
         @include global.mq('sp'){
             letter-spacing: 1.755px;
             font-size: 13px;
             margin-left: 14px;
+            line-height: calc( 20 / 13 );
+            &:last-of-type{
+                margin-top: 20px;
+            }
         }
     }
 }
