過ごし方ページの修正を行いました。

--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -1381,7 +1381,7 @@ header {
 }
 
 .p-spend-slide__block8 .p-spend-slide__card {
-	margin-left: 136px;
+	margin-left: 96px;
 	margin-right: 70px;
 	width: 374px;
 }
@@ -1456,6 +1456,7 @@ header {
 	font-family: "Shippori Mincho", serif;
 	font-size: 32px;
 	font-weight: 600;
+	letter-spacing: 4.16px;
 	opacity: 0;
 	text-align: center;
 }
@@ -1495,6 +1496,11 @@ header {
 	font-family: "Inter", sans-serif;
 	font-size: 14px;
 	margin-top: 30px;
+}
+
+.p-spend-tour__detail__head {
+	margin-left: -8px;
+	white-space: nowrap;
 }
 
 .p-gnav {
@@ -2346,6 +2352,10 @@ dialog::backdrop {
 
 @media (min-width: 768px) and (max-width: 1280px) {
 
+.is-sp {
+	display: none;
+}
+
 .c-drawer-btn {
 	height: 51px;
 	width: 66px;
@@ -2423,7 +2433,7 @@ dialog::backdrop {
 
 @media (max-width: 767px) {
 
-.is-sp .is-pc {
+.is-pc {
 	display: none;
 }
 
@@ -2968,6 +2978,7 @@ dialog::backdrop {
 
 .p-spend-tour__title {
 	font-size: 24px;
+	letter-spacing: 0;
 	line-height: 1.4583333333;
 }
 
@@ -2999,6 +3010,10 @@ dialog::backdrop {
 	font-size: 11px;
 	letter-spacing: 1.32px;
 	line-height: 1.0301818182;
+}
+
+.p-spend-tour__detail__head span {
+	margin-left: 8px;
 }
 
 .p-spend-tour__img img {
