--- a/開発用/src/assets/sass/layout/_l-lower-header.scss
+++ b/開発用/src/assets/sass/layout/_l-lower-header.scss
@@ -49,9 +49,9 @@
 }
 
 #cooking .l-lower-header {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url(../../assets/img/cooking/header.jpg), lightgray -313.461px -3.068px / 254.002% 107.11% no-repeat;
-    // background: url(../../assets/img/cooking/header.jpg) no-repeat;
-    // background-size: contain;
+    // background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url(../../assets/img/cooking/header.jpg), lightgray -313.461px -3.068px / 100% 100% no-repeat;
+    background: url(../../assets/img/cooking/header.jpg) no-repeat;
+    background-size: cover;
 
     @include global.mq(sp) {
         // background-image: url(../../assets/img/cooking/header_sp.jpg);
