フォントカラー2D2D2Eに変更

--- a/開発用/src/assets/sass/component/_c-price__weekday-details.scss
+++ b/開発用/src/assets/sass/component/_c-price__weekday-details.scss
@@ -5,6 +5,7 @@
   display: inline-block;
   margin-left: 116px;
   font-family: global.$main-font;
+  color: global.$text-color;
   @include global.font(16, 400, 30.24, 1.92);
   @include global.mq('sp') {
     margin-left: 0px;
