--- a/開発用/src/assets/sass/component/_c-price__holiday-details.scss
+++ b/開発用/src/assets/sass/component/_c-price__holiday-details.scss
@@ -5,6 +5,7 @@
   margin-left: 60px;
   font-family: global.$main-font;
   @include global.font(16, 400, 30.24, 1.92);
+  color: global.$text-color;
 
   @include global.mq('sp') {
     @include global.font(15, 400, 28.35, 1.8);
