--- a/開発用/src/assets/sass/component/_c-price__holiday-label.scss
+++ b/開発用/src/assets/sass/component/_c-price__holiday-label.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   margin-left: 118px;
   font-family: global.$main-font;
+  color: global.$text-color;
   @include global.font(16, 400, 30.24, 1.92);
   @include global.mq('sp') {
     margin-left: 0;
