・ハンバーガーメニュー全ページ(TOPリンク挿入) ・フッター全ページ(温泉、客室、料理順番変更。インスタ、FB位置変更。アイコンにリンク追加)

--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -297,7 +297,7 @@ header {
 }
 
 .c-news__date {
-	color: #181818;
+	color: #2D2D2E;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
 	font-weight: 400;
@@ -332,7 +332,7 @@ header {
 }
 
 .c-news__content {
-	color: #181818;
+	color: #2D2D2E;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 0.9375rem;
 	font-weight: 400;
@@ -568,6 +568,7 @@ header {
 }
 
 .c-footer__logo {
+	display: block;
 	margin: 0 auto;
 	width: 66px;
 }
@@ -768,6 +769,7 @@ header {
 }
 
 .c-operating__time {
+	color: #2D2D2E;
 	display: inline-block;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
@@ -788,6 +790,7 @@ header {
 }
 
 .c-price__weekday-label {
+	color: #2D2D2E;
 	display: inline-block;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
@@ -798,6 +801,7 @@ header {
 }
 
 .c-price__weekday-details {
+	color: #2D2D2E;
 	display: inline-block;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
@@ -808,6 +812,7 @@ header {
 }
 
 .c-price__holiday-label {
+	color: #2D2D2E;
 	display: inline-block;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
@@ -818,6 +823,7 @@ header {
 }
 
 .c-price__holiday-details {
+	color: #2D2D2E;
 	display: inline-block;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 1rem;
@@ -981,7 +987,7 @@ header {
 	height: 90.5%;
 	position: absolute;
 	right: 0;
-	top: 128px;
+	top: 8vw;
 	width: 74.65%;
 }
 
@@ -1649,7 +1655,7 @@ header {
 .p-content__text {
 	max-width: 340px;
 	padding-left: 33px;
-	padding-top: 154px;
+	padding-top: 11%;
 	width: 340px;
 	z-index: 1;
 }
@@ -1685,7 +1691,7 @@ header {
 	display: flex;
 	gap: 34%;
 	margin: 0 auto;
-	padding-bottom: 128px;
+	padding-bottom: 115px;
 	position: relative;
 	width: 75.31%;
 	z-index: 2;
@@ -1701,15 +1707,12 @@ header {
 }
 
 .p-footer__sns--items {
-	bottom: 45px;
+	bottom: 120px;
 	display: flex;
 	gap: 58px;
 	margin-left: auto;
-	padding-bottom: 97px;
-	padding-right: 31%;
-	padding-top: 8px;
 	position: absolute;
-	right: 7px;
+	right: 21.5vw;
 	width: 130px;
 	z-index: 2;
 }
@@ -1827,6 +1830,10 @@ header {
 .p-price__weekday--wrap {
 	position: absolute;
 	top: 18.7%;
+}
+
+.p-price__weekday--wrap .p-price__detail--block {
+	color: #2D2D2E;
 }
 
 .p-onsen__info--last {
@@ -2349,6 +2356,10 @@ dialog::backdrop {
 }
 
 @media (min-width: 768px) and (max-width: 1280px) {
+
+body {
+	min-width: 1000px;
+}
 
 .is-sp {
 	display: none;
