--- a/開発用/src/assets/sass/foundation/_base.scss
+++ b/開発用/src/assets/sass/foundation/_base.scss
@@ -15,6 +15,9 @@ body {
   &.is-active{
     overflow-y: hidden;
   }
+  @include global.mq('tab') {
+    min-width: 1000px;
+      }
 }
 
 .is-sp {
