--- a/開発用/src/assets/sass/project/_p-footer__sns--items.scss
+++ b/開発用/src/assets/sass/project/_p-footer__sns--items.scss
@@ -3,14 +3,13 @@
 .p-footer__sns--items {
   width: 130px;
   margin-left: auto;
-  padding-top: 8px;
   display: flex;
   gap: 58px;
-  padding-bottom: 97px;
-  padding-right: 31%;
+ 
+
   position: absolute;
-  bottom: 45px;
-  right: 7px;
+bottom: 120px;
+  right: 21.5vw;
   z-index: 2;
 
   .fa-3x {
