--- a/開発用/src/assets/sass/project/_p-content.scss
+++ b/開発用/src/assets/sass/project/_p-content.scss
@@ -11,7 +11,7 @@ padding-bottom: 122px;
     width: 74.65%;
     height: 90.5%;
     position: absolute;
-    top: 128px;
+    top: 8vw;
     right: 0;
     @include global.mq('sp') {
       width: 100%;
