--- a/開発用/src/assets/sass/project/_p-content__text.scss
+++ b/開発用/src/assets/sass/project/_p-content__text.scss
@@ -3,7 +3,7 @@
 
 .p-content__text {
   z-index: 1;
-  padding-top: 154px;
+  padding-top: 11%;
   padding-left: 33px;
   max-width: 340px;
   width: 340px;
