料理写真のズレを修正しました。

--- a/開発用/src/assets/sass/project/_p-course.scss
+++ b/開発用/src/assets/sass/project/_p-course.scss
@@ -40,7 +40,7 @@
     }
 }
 .p-course__img--03 {
-    width: 602px;
+    // width: 602px;
     grid-row: 1 / 3;
     grid-column: 3/ 4;
     @include global.mq(sp) {
