--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -2143,6 +2143,7 @@ dialog::backdrop {
 }
 
 .p-course__menu {
+	aspect-ratio: 335/780;
 	background-image: url(../../assets/img/cooking/menu-bg.jpg);
 	color: #2D2D2E;
 	height: 335px;
@@ -2358,6 +2359,10 @@ dialog::backdrop {
 
 body {
 	min-width: 1000px;
+}
+
+body#cooking {
+	min-width: auto;
 }
 
 .is-sp {
@@ -3312,22 +3317,20 @@ body {
 .p-course__gallery {
 	aspect-ratio: 335/298;
 	gap: 1px;
-	grid-template-columns: 1fr 52px 1fr;
-	grid-template-rows: 84px 84px 129px;
+	grid-template-columns: 33.7% 7.75% 7.75% 49.8%;
+	grid-template-rows: 28.18% 28.18% 43.28%;
 	margin: 0 auto 14px;
 	width: 89.3%;
 }
 
 .p-course__img--03 {
-	grid-column: 2/4;
+	grid-column: 2/5;
 	grid-row: 1/3;
-	width: 58.5vw;
 }
 
 #sea .p-course__img--01 {
-	grid-column: 1/3;
+	grid-column: 1/4;
 	order: 4;
-	width: 44.5vw;
 }
 
 #sea .p-course__img--02 {
@@ -3339,6 +3342,7 @@ body {
 }
 
 #sea .p-course__img--04 {
+	grid-column: 4/5;
 	order: 5;
 }
 
@@ -3354,10 +3358,14 @@ body {
 	order: 1;
 }
 
-#luxury .p-course__img--04 {
-	grid-column: 1/3;
+#luxury .p-course__img--01 {
+	grid-column: 1/4;
 	order: 4;
-	width: 44.5vw;
+}
+
+#luxury .p-course__img--04 {
+	grid-column: 4/5;
+	order: 4;
 }
 
 #luxury .p-course__img--05 {
@@ -3372,12 +3380,12 @@ body {
 }
 
 #sea .p-course__menu {
-	margin-left: 0;
+	margin-right: auto;
 }
 
 #luxury .p-course__menu {
 	margin-bottom: 60px;
-	margin-right: 0;
+	margin-left: auto;
 }
 
 .p-course__title {
