--- a/開発用/src/assets/sass/project/_p-course.scss
+++ b/開発用/src/assets/sass/project/_p-course.scss
@@ -24,8 +24,8 @@
     aspect-ratio: 1380 / 480;
     margin-bottom: 40px;
     @include global.mq(sp) {
-        grid-template-columns: 1fr 52px 1fr;
-        grid-template-rows: 84px 84px 129px;
+        grid-template-columns: 33.7% 7.75% 7.75% 49.8%;
+        grid-template-rows: 28.18% 28.18% 43.28%;
         gap: 1px;
         aspect-ratio: 335 / 298;
         width: 89.3%;
@@ -44,16 +44,14 @@
     grid-row: 1 / 3;
     grid-column: 3/ 4;
     @include global.mq(sp) {
-        grid-column: 2/ 4;
+        grid-column: 2/ 5;
         grid-row: 1 / 3;
-        width: 58.5vw;
     }
 }
 #sea .p-course__img--01 {
     @include global.mq(sp) {
         order: 4;
-        width: 44.5vw;
-        grid-column: 1/ 3;
+        grid-column: 1/ 4;
     }
 }
 #sea .p-course__img--02 {
@@ -69,6 +67,7 @@
 #sea .p-course__img--04 {
     @include global.mq(sp) {
         order: 5;
+        grid-column: 4 / 5;
     }
 }
 #sea .p-course__img--05 {
@@ -89,15 +88,21 @@
 // #luxury .p-course__img--03 {
 //     @include global.mq(sp) {
 //         order: 4;
-//         width: 167px;
 //         grid-column: 1/ 3;
 //     }
 // }
+
+#luxury .p-course__img--01 {
+    @include global.mq(sp) {
+        order: 4;
+        grid-column: 1/ 4;
+    }
+}
+
 #luxury .p-course__img--04 {
     @include global.mq(sp) {
         order: 4;
-        width: 44.5vw;
-        grid-column: 1/ 3;
+        grid-column: 4 / 5;
     }
 }
 #luxury .p-course__img--05 {
@@ -111,6 +116,7 @@
     padding: 44px 80px 0 82px;
     writing-mode: vertical-rl;
     margin-bottom: 120px;
+    aspect-ratio: 335 / 780;
     height: 335px;
     color: global.$text-color;
     @include global.mq(sp) {
@@ -123,13 +129,13 @@
 #sea .p-course__menu {
     margin-left: auto;
     @include global.mq(sp) {
-        margin-left: 0;
+        margin-right: auto;
     }
 }
 #luxury .p-course__menu {
     margin-right: auto;
     @include global.mq(sp) {
-        margin-right: 0;
+        margin-left: auto;
         margin-bottom: 60px;
     }
 }
