--- a/開発用/src/assets/sass/project/_p-course.scss
+++ b/開発用/src/assets/sass/project/_p-course.scss
@@ -2,18 +2,32 @@
 
 .p-course {
     margin-bottom: 20px;
+    @include global.mq('sp'){
+        text-align: center;
+    }
+
 }
+
+.p-course__inner{
+    max-width: 1080px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 #sea.p-course__version {
-    padding-left: 60px;
-    @include global.mq(sp) {
-        padding: 0;
+    .p-course__gallery{
+        padding-left: 60px;
+        @include global.mq(sp) {
+            padding: 0;
+        }
     }
 }
 #luxury.p-course__version {
-    padding-left: 0;
-    padding-right: 60px;
-    @include global.mq(sp) {
-        padding: 0;
+    .p-course__gallery{
+        padding-right: 60px;
+        @include global.mq(sp) {
+            padding: 0;
+        }
     }
 }
 .p-course__gallery {
@@ -23,6 +37,7 @@
     gap: 2px;
     aspect-ratio: 1380 / 480;
     margin-bottom: 40px;
+  
     @include global.mq(sp) {
         grid-template-columns: 33.7% 7.75% 7.75% 49.8%;
         grid-template-rows: 28.18% 28.18% 43.28%;
@@ -124,6 +139,8 @@
         height: 282px;
         margin-bottom: 40px;
         max-width: 100%;
+        display: inline-block;
+        text-align: left;
     }
 }
 #sea .p-course__menu {
@@ -135,7 +152,7 @@
 #luxury .p-course__menu {
     margin-right: auto;
     @include global.mq(sp) {
-        margin-left: auto;
+        margin: auto;
         margin-bottom: 60px;
     }
 }
@@ -145,10 +162,12 @@
     font-weight: 800;
     line-height: calc(34.75 / 24);
     padding-left: 70px;
+    letter-spacing: 11px;
     @include global.mq(sp) {
         padding-left: 20px;
         font-size: calc(20 / 16 * 1rem);
         line-height: calc(28.96 / 20);
+        letter-spacing: 9px;
     }
 }
 .p-course__list {
@@ -162,6 +181,7 @@
     font-weight: 800;
     font-family: global.$title-font;
     line-height: calc(21.72 / 15);
+    letter-spacing: 7px;
 }
 .p-course__item:not(:last-of-type) {
     padding-left: 52px;
