--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -2148,12 +2148,13 @@ dialog::backdrop {
 }
 
 .p-course__menu {
-	aspect-ratio: 335/780;
 	background-image: url(../../assets/img/cooking/menu-bg.jpg);
 	color: #2D2D2E;
 	height: 335px;
 	margin-bottom: 120px;
-	padding: 44px 80px 0 82px;
+	max-width: 780px;
+	padding: 44px 7.4% 0 7.4%;
+	width: 100%;
 	writing-mode: vertical-rl;
 }
 
@@ -3389,6 +3390,8 @@ body#cooking {
 	max-width: 100%;
 	padding: 23px 6vw 0;
 	text-align: left;
+	width: -moz-fit-content;
+	width: fit-content;
 }
 
 #sea .p-course__menu {
