--- a/開発用/src/assets/sass/project/_p-course.scss
+++ b/開発用/src/assets/sass/project/_p-course.scss
@@ -128,10 +128,11 @@
 
 .p-course__menu {
     background-image: url(../../assets/img/cooking/menu-bg.jpg);
-    padding: 44px 80px 0 82px;
+    padding: 44px 7.4% 0 7.4%;
     writing-mode: vertical-rl;
     margin-bottom: 120px;
-    aspect-ratio: 335 / 780;
+    width: 100%;
+    max-width: 780px;
     height: 335px;
     color: global.$text-color;
     @include global.mq(sp) {
@@ -139,6 +140,7 @@
         height: 282px;
         margin-bottom: 40px;
         max-width: 100%;
+        width: fit-content;
         display: inline-block;
         text-align: left;
     }
