--- a/開発用/src/assets/sass/component/_c-scrolldown.scss
+++ b/開発用/src/assets/sass/component/_c-scrolldown.scss
@@ -13,6 +13,7 @@
 
 .c-scrolldown span {
   position: absolute;
+  font-family: global.$text-font;
   left: 3px;
   bottom: 33px;
   color: global.$white-color;
